Adjust nginx to use less files on host system

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,6 @@
 worker_processes 1;
-error_log error.log notice;
+error_log /var/nginx_error.log notice;
+pid /var/nginx.pid;
 daemon off;
 events {
     worker_connections 1024;
@@ -7,15 +8,21 @@ events {
 
 http {
     variables_hash_max_size 1024;
-    access_log access.log;
+    access_log /var/nginx_access.log;
     include /usr/local/openresty/nginx/conf/mime.types;
     set_real_ip_from 127.0.0.1;
     real_ip_header X-Real-IP;
     charset utf-8;
 
+    client_body_temp_path      /var/nginx_client_body_temp;
+    proxy_temp_path            /var/nginx_proxy_temp;
+    fastcgi_temp_path          /var/nginx_fastcgi_temp_path;
+    uwsgi_temp_path            /var/nginx_uwsgi_temp_path;
+    scgi_temp_path             /var/nginx_scgi_temp_path;
+
     server {
         listen 8080;
-        server_name  yr.hveem.no;
+        server_name  atlas.dt.camras.nl;
         lua_code_cache on;
         set $root /amatyr;
         root $root;
